--- a/styles/out.css
+++ b/styles/out.css
@@ -590,3 +590,76 @@ img {
       height: 100%;
     }
   }
+
+  @media only screen
+
+  /* iphone SE */
+  and (device-width: 375px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) {
+    .sticky {
+      display: flex;
+      align-content: center;
+      top: 0;
+      width: 100%;
+      flex-direction: row;
+      justify-content: center;
+      flex-wrap: nowrap;
+      align-items: flex-start;
+    }
+
+    .head {
+      display: flex;
+      align-content: center;
+      top: 0;
+      width: 100%;
+      flex-direction: column;
+      justify-content: center;
+      flex-wrap: nowrap;
+      align-items: center;
+      margin-left: 10%;
+    }
+
+    #main {
+      padding: 0;
+    }
+
+    .iconcon {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+    }
+
+    .cv {
+      position: ;
+      right: 3%;
+      top: 2%;
+    }
+
+    .about {
+      width: 100%;
+      text-align: center;
+      position: relative;
+      /* right: 50%; */
+      /* left: 50%; */
+    }
+
+    .aboutcontainer {
+      display: flex;
+      justify-content: center;
+      display: flex;
+      justify-content: center;
+      position: relative;
+      width: 85vw;
+      LEFT: 50%;
+      right: 50%;
+      margin-right: -50vw;
+      margin-left: -50vw;
+    }
+
+    h1 {
+      margin-bottom: 0;
+    }
+    .cover {
+      width: 100%;
+      height: 100%;
+    }
+  }
