--- a/styles/stylesfuze.css
+++ b/styles/stylesfuze.css
@@ -813,3 +813,20 @@ and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-r
   display: flex;
   justify-content: flex-end;
 }
+
+.carouselcontainer {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  justify-content: center;
+
+}
+
+.carousel {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+
+}
