--- a/styles/index.css
+++ b/styles/index.css
@@ -21,7 +21,6 @@ body {
   /* margin: 1%; */
   */: ;
   font-family: sans-serif;
-  background-color: blue;
   /* top: 0; */
   /* right: 0; */
   color: black;
@@ -34,12 +33,11 @@ body {
   align-items: center;
   display: flex;
   font-weight: bolder;
-  border-width: 1.5px;
   border-style: solid;
-  border-color: blue;
   justify-content: flex-end;
   flex-direction: row;
   align-content: flex-end;
+  decoration: underline;
 }
 
 svg {
@@ -1461,6 +1459,7 @@ a:hover {
   display: flex;
       justify-content: flex-end;
       width: 100%;
+      align-items: center;
 
 }
 
@@ -1512,7 +1511,7 @@ padding: 0 10px;
 
 .cv {
 
-      font-family: sans-serif;
+  font-family: sans-serif;
       background-color: white;
       /* top: 0; */
       /* right: 0; */
@@ -1521,19 +1520,21 @@ padding: 0 10px;
       text-align: center;
       text-decoration: none;
       font-size: 10px;
-      height: 50px;
+      height: 40px;
       border-radius: 20px;
       align-items: center;
       display: flex;
       font-weight: bolder;
       border-width: 1.5px;
       border-style: solid;
-      border-color: blue;
+      border-color: white;
       justify-content: flex-end;
       flex-direction: row;
       align-content: flex-end;
       margin-right: 1%;
-
+      stroke: blue;
+      stroke-width: .3;
+      fill: blue;
 }
 
 .name {
@@ -1954,4 +1955,8 @@ textarea {
   input[type='text'], [type='email'], select, textarea {
     font-size: 0.875em;
   }
+}
+
+.vidabout {
+  margin-left: 1%;
 }
