--- a/styles/stylesconq.css
+++ b/styles/stylesconq.css
@@ -104,7 +104,6 @@ h2 {
   /* margin: 1%; */
   */: ;
   font-family: sans-serif;
-  background-color: blue;
   /* top: 0; */
   /* right: 0; */
   color: black;
@@ -117,12 +116,11 @@ h2 {
   align-items: center;
   display: flex;
   font-weight: bolder;
-  border-width: 1.5px;
   border-style: solid;
-  border-color: blue;
   justify-content: flex-end;
   flex-direction: row;
   align-content: flex-end;
+  decoration: underline;
 }
 
 .home {
@@ -357,13 +355,15 @@ a:hover {
 
 .iconcon {
   display: flex;
-  justify-content: flex-end;
-  width: 90%;
+      justify-content: flex-end;
+      width: 100%;
+      align-items: center;
+
 }
 
 .cv {
-  margin: 1%; */
-      font-family: sans-serif;
+
+  font-family: sans-serif;
       background-color: white;
       /* top: 0; */
       /* right: 0; */
@@ -372,18 +372,21 @@ a:hover {
       text-align: center;
       text-decoration: none;
       font-size: 10px;
-      height: 50px;
+      height: 40px;
       border-radius: 20px;
       align-items: center;
       display: flex;
       font-weight: bolder;
       border-width: 1.5px;
       border-style: solid;
-      border-color: blue;
+      border-color: white;
       justify-content: flex-end;
       flex-direction: row;
       align-content: flex-end;
-
+      margin-right: 1%;
+      stroke: blue;
+      stroke-width: .3;
+      fill: blue;
 }
 
 div.sticky {
@@ -391,17 +394,16 @@ div.sticky {
   position: sticky;
   top: 0;
   padding: 0px;
-  margin: 2%;
   z-index: 1;
   font-family: sans-serif;
   margin-left: 1%;
   font-weight: normal;
   display: flex;
   letter-spacing: -10%;
-  margin-bottom: 0;
   /* margin: 0; */
-  /* align-items: center;*/
+  align-items: center;
   background-color: white;
+  margin: 0;
 }
 
 /* The side navigation menu */
@@ -570,8 +572,16 @@ and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-r
 
   .iconcon {
     display: flex;
-    justify-content: center;
-    width: 100%;
+        justify-content: flex-end;
+        width: 100%;
+        align-items: center;
+  }
+  .icon {
+    display: block;
+    fill: blue;
+    height: 50px;
+    margin: 0 auto;
+    width: 50px;
   }
 
   .cv {
