--- a/styles/stylesfuze.css
+++ b/styles/stylesfuze.css
@@ -87,7 +87,7 @@ h2 {
   /* margin: 1%; */
   */: ;
   font-family: sans-serif;
-  background-color: red;
+  background-color: black;
   /* top: 0; */
   /* right: 0; */
   color: black;
@@ -102,7 +102,7 @@ h2 {
   font-weight: bolder;
   border-width: 1.5px;
   border-style: solid;
-  border-color: red;
+  border-color: black;
   justify-content: flex-end;
   flex-direction: row;
   align-content: flex-end;
@@ -147,7 +147,7 @@ h2 {
 svg {
   color: white;
   width: 100%;
-  height: 50%;
+  height: 45%;
 }
 
 .homesvg {
@@ -308,17 +308,17 @@ video {
 }
 
 a {
-  color: black;
+  color: red;
   text-decoration: none;
 }
 
 a:hover {
-  color: black;
+  color: red;
   text-decoration: underline;
 }
 
 a {
-  color: black;
+  color: red;
   text-decoration: none;
 }
 
@@ -360,12 +360,13 @@ a:hover {
   display: flex;
   justify-content: flex-end;
   width: 90%;
+  align-items: center;
 }
 
 .cv {
   margin: 1%; */
       font-family: sans-serif;
-      background-color: white;
+      background-color: black;
       /* top: 0; */
       /* right: 0; */
       color: red;
@@ -380,13 +381,37 @@ a:hover {
       font-weight: bolder;
       border-width: 1.5px;
       border-style: solid;
-      border-color: red;
+      border-color: black;
       justify-content: flex-end;
       flex-direction: row;
       align-content: flex-end;
+      fill: red;
 
 
 }
+.cv:hover {
+  /* margin: 1%; */
+  */: ;
+  font-family: sans-serif;
+  /* top: 0; */
+  /* right: 0; */
+  color: black;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 10px;
+  height: 50px;
+  border-radius: 20px;
+  align-items: center;
+  display: flex;
+  font-weight: bolder;
+  border-style: solid;
+  justify-content: flex-end;
+  flex-direction: row;
+  align-content: flex-end;
+  decoration: underline;
+}
+
 
 div.sticky {
   position: -webkit-sticky;
@@ -404,6 +429,7 @@ div.sticky {
   /* margin: 0; */
   /* align-items: center;*/
   background-color: black;
+  margin: 0;
 }
 
 /* The side navigation menu */
@@ -429,6 +455,10 @@ div.sticky {
   color: white;
   display: block;
   transition: 0.3s;
+}
+
+.st0 {
+  fill: black;
 }
 
 /* When you mouse over the navigation links, change their color */
@@ -575,6 +605,7 @@ and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-r
     display: flex;
     justify-content: center;
     width: 100%;
+    align-items: center;
   }
 
   .cv {
